feat: implement core compiler (flow, state, style) and interactive todo app with watch mode

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "viand-monorepo",
   "private": true,
+  "type": "module",
   "description": "The Viand Programming Language ecosystem",
   "workspaces": [
     "packages/*",
