--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   },
   "devDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "acorn": "^8.15.0",
+    "astring": "^1.9.0",
+    "estree-walker": "^3.0.3"
   }
 }
