chore: freeze state - fully functional svelte 5 todo app with structured IR

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "npm test --workspaces"
   },
   "devDependencies": {
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
