--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "acorn": "^8.15.0",
     "astring": "^1.9.0",
-    "estree-walker": "^3.0.3"
+    "estree-walker": "^3.0.3",
+    "magic-string": "^0.30.21"
   }
 }
