--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "*.viand": "${capture}.test.ts, ${capture}.viand.logic.svelte.ts"
+    "*.viand": "${capture}.test.ts, ${capture}.viand.logic.svelte.ts, ${capture}.sql"
   }
 }
