--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "customConditions": ["browser"]
   },
   "include": ["packages/**/*.ts", "project-test/src/**/*.ts"]
 }
