--- a/project-blog-spa/package.json
+++ b/project-blog-spa/package.json
@@ -11,11 +11,15 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.3.1",
+    "autoprefixer": "^10.4.23",
     "jsdom": "^27.4.0",
+    "postcss": "^8.5.6",
     "svelte": "^5.49.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vitest": "^4.0.18"
