--- a/project-blog-spa/package.json
+++ b/project-blog-spa/package.json
@@ -23,5 +23,8 @@
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "chart.js": "^4.5.1"
   }
 }
