feat: complete 'Big Bang' migration to pure Signals foundation
- Replaced Svelte with a lightweight, standalone Signals foundation (@preact/signals-core)
- Created @viand/runtime workspace package with stable, additive reconciliation
- Rewrote standard library (router, intl, notify) in pure JavaScript
- Updated compiler to emit pure JS factory functions with support for:
    - Fine-grained reactivity (automated computed wrapping)
    - Two-way data binding (bind:)
    - Components and each loops
    - Conditional match statements and slot rendering
    - Reactive element references (#ref)
    - Automated CSS extraction and head injection
    - Global reactive singletons (memory modules)
- Migrated all ecosystem projects (project-test, project-blog-spa, project-blog-mpa) to the new foundation
- Updated test gauntlet to verify JS output instead of Svelte

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "The Viand Programming Language ecosystem",
   "workspaces": [
     "packages/*",
-    "editors/*"
+    "editors/*",
+    "project-test",
+    "project-blog-spa",
+    "project-blog-mpa"
   ],
   "scripts": {
     "dev": "node packages/cli/bin/viand.js dev",
@@ -23,6 +26,7 @@
     "acorn": "^8.15.0",
     "astring": "^1.9.0",
     "estree-walker": "^3.0.3",
-    "magic-string": "^0.30.21"
+    "magic-string": "^0.30.21",
+    "zod": "^4.3.6"
   }
 }
