--- a/project-blog-spa/package.json
+++ b/project-blog-spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-test",
+  "name": "project-blog-spa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,22 +9,20 @@
     "preview": "vite preview",
     "test": "vitest run"
   },
+  "dependencies": {
+    "@viand/runtime": "^0.1.0",
+    "chart.js": "^4.5.1"
+  },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/svelte": "^5.3.1",
     "autoprefixer": "^10.4.23",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
-    "svelte": "^5.49.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vitest": "^4.0.18"
-  },
-  "dependencies": {
-    "chart.js": "^4.5.1"
   }
 }
