--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@viand/runtime",
   "version": "0.1.0",
+  "type": "module",
   "description": "Core reactive runtime for Viand using Preact Signals",
   "main": "dist/index.js",
   "module": "dist/index.js",
