--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,9 @@ out
 .nuxt
 dist
 
+# Nitro build output
+.nitro/
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
