--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "acorn": "^8.15.0",
     "astring": "^1.9.0",
     "estree-walker": "^3.0.3",
+    "h3": "^2.0.1-rc.11",
     "magic-string": "^0.30.21",
+    "nitropack": "^2.13.1",
     "zod": "^4.3.6"
   }
 }
