--- a/project-blog-spa/package.json
+++ b/project-blog-spa/package.json
@@ -18,6 +18,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "autoprefixer": "^10.4.23",
+    "better-sqlite3": "^12.6.2",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
